[gd_scene load_steps=2 format=3 uid="uid://jt8pce7jkta8"]

[ext_resource type="Script" path="res://Script/Menu.gd" id="1_3180r"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3180r")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -84.5
offset_top = 99.0
offset_right = 84.5
offset_bottom = 186.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "DÃ©mineur
Multijoueur"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonHost" type="Button" parent="."]
layout_mode = 0
offset_left = 272.0
offset_top = 657.0
offset_right = 372.0
offset_bottom = 701.0
text = "Host"

[node name="ButtonJoin" type="Button" parent="."]
layout_mode = 0
offset_left = 437.0
offset_top = 658.0
offset_right = 530.0
offset_bottom = 702.0
text = "Join"

[node name="MultiplayerText" type="Label" parent="."]
layout_mode = 0
offset_left = 239.0
offset_top = 705.0
offset_right = 557.0
offset_bottom = 738.0

[node name="ButtonPlay" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -68.0
offset_top = -50.0
offset_right = 68.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 0
text = "Jouer"

[node name="Settings" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -399.0
offset_top = -14.0
offset_right = 400.0
offset_bottom = 147.0
grow_horizontal = 2
grow_vertical = 2

[node name="BoardGameText" type="Label" parent="Settings"]
layout_mode = 0
offset_left = 315.5
offset_top = 36.0
offset_right = 488.5
offset_bottom = 71.0
theme_override_font_sizes/font_size = 25
text = "Plateau de jeu"

[node name="NumberOfLine" type="Label" parent="Settings"]
layout_mode = 0
offset_left = 261.0
offset_top = 88.0
offset_right = 311.0
offset_bottom = 111.0
text = "Ligne"

[node name="NumberOfColumn" type="Label" parent="Settings"]
layout_mode = 0
offset_left = 365.0
offset_top = 91.0
offset_right = 429.0
offset_bottom = 114.0
text = "Colonne"

[node name="NumberOFBomb" type="Label" parent="Settings"]
layout_mode = 0
offset_left = 481.0
offset_top = 90.0
offset_right = 536.0
offset_bottom = 113.0
text = "Bombe"

[node name="TimerTextLabel" type="Label" parent="Settings"]
offset_left = 321.0
offset_top = 211.0
offset_right = 376.0
offset_bottom = 234.0
text = "Timer"

[node name="SpinBoxLine" type="SpinBox" parent="Settings"]
layout_mode = 0
offset_left = 251.0
offset_top = 121.0
offset_right = 334.063
offset_bottom = 152.0
min_value = 2.0
max_value = 13.0
value = 9.0
update_on_text_changed = true

[node name="SpinBoxColumn" type="SpinBox" parent="Settings"]
layout_mode = 0
offset_left = 362.0
offset_top = 122.0
offset_right = 445.063
offset_bottom = 153.0
min_value = 2.0
max_value = 13.0
value = 9.0
update_on_text_changed = true

[node name="SpinBoxBomb" type="SpinBox" parent="Settings"]
layout_mode = 0
offset_left = 475.0
offset_top = 122.0
offset_right = 558.063
offset_bottom = 153.0
min_value = 1.0
value = 10.0
update_on_text_changed = true

[node name="SpinBoxTimer" type="SpinBox" parent="Settings"]
layout_mode = 0
offset_left = 395.0
offset_top = 208.0
offset_right = 478.063
offset_bottom = 239.0
min_value = 5.0
max_value = 30.0
value = 10.0

[node name="ErrorText" type="Label" parent="Settings"]
modulate = Color(1, 0, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -271.5
offset_top = 87.5
offset_right = 273.5
offset_bottom = 110.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 15

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Scene/Player.tscn")
spawn_path = NodePath("..")

[connection signal="pressed" from="ButtonHost" to="." method="_on_button_host_pressed"]
[connection signal="pressed" from="ButtonJoin" to="." method="_on_button_join_pressed"]
[connection signal="button_down" from="ButtonPlay" to="." method="_on_button_play_button_down"]
[connection signal="value_changed" from="Settings/SpinBoxLine" to="." method="_on_spin_box_line_value_changed"]
[connection signal="value_changed" from="Settings/SpinBoxColumn" to="." method="_on_spin_box_column_value_changed"]
[connection signal="value_changed" from="Settings/SpinBoxBomb" to="." method="_on_spin_box_bomb_value_changed"]
[connection signal="value_changed" from="Settings/SpinBoxTimer" to="." method="_on_spin_box_timer_value_changed"]
